# sierra-pass-watch

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  ingest.yml
backend/: Dockerfile  pyproject.toml
backend/api/: __main__.py  catalog.py  config.py  crashes.py  db.py  journeys.py  main.py  middleware.py  paths.py  schemas.py  segments.py  weather.py
backend/tests/: conftest.py  test_correlation_id.py  test_crash_patterns_endpoint.py  test_crash_store_integration.py  test_forbidden_keys.py  test_forecast_endpoint.py  test_health.py  test_incidents_endpoint.py  test_journey_endpoint.py  test_journey_path_endpoint.py  test_openmeteo_parser.py  test_origin_verify.py  test_regime_contract.py  test_routes_endpoint.py  test_segment_repository.py  test_segments_endpoint.py
docs/: README.md  architecture.md  deployment.md  near-realtime-alerts.md  warehouse.md  weather-regimes.md
docs/adr/: 0001-frontend-framework.md  0002-typescript.md  0003-http-client.md  0004-backend-framework.md  0005-database.md  0006-data-plane.md  0007-spatial-model-per-mile-bins.md  0008-near-realtime-alerts.md  0009-journey-routing.md  0010-crash-history-at-journey-grain.md  0011-deployment-and-cicd.md  0012-direct-poll-ingestion.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  contract.test.ts  crashPatterns.ts  forecast.ts  health.ts  incidents.ts  journey.ts  journeyPath.ts  routes.ts  segments.ts  towns.ts  types.ts
frontend/src/components/: AlertBanner.tsx  BackendStatus.tsx  CrashHistory.test.tsx  CrashHistory.tsx  CrashMapSection.tsx  Footer.tsx  Hero.tsx  IncidentsSection.tsx  InsightSection.tsx  MuirQuote.tsx  Nav.tsx  Planner.tsx  RouteOverview.test.tsx  RouteOverview.tsx  WeatherIcon.tsx  WeatherSection.tsx
frontend/src/lib/: data.ts  forecastAdapter.ts  hotspot.ts  regime.ts  useLeafletMap.ts  useReveal.ts
frontend/src/test/: setup.ts
infra/cdk/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/cdk/lib/: certificate-stack.ts  registry-stack.ts  sierra-pass-watch-stack.ts  sierra-safe-stack.ts
pipeline/: alert_consumer.py  alert_producer.py  alerts.py  backfill.py  build_journeys.py  build_polylines.py  consumer.py  database.py  fetch.py  geo.py  poller.py  polylines.py  producer.py  regime.py  routes.py  streaming.py
pipeline/data/: sierra_nevada_coords.json
pipeline/db/: schema.sql
pipeline/sources/: ccrs.py  chp.py  cwwp2.py  nws.py  openmeteo.py  usgs.py
pipeline/tests/: conftest.py  test_alerts.py  test_backfill.py  test_chp.py  test_consumer.py  test_contract.py  test_journeys.py  test_poller.py  test_polylines.py  test_producer.py  test_regime.py  test_route_catalogue.py  test_routes.py  test_sources.py  test_warehouse_seeds.py
pipeline/tests/fixtures/: chp_sample.json  chp_sample.xml  cwwp2_cc_sample.json  cwwp2_rwis_sample.json  nws_forecast_sample.json  openmeteo_sample.json  usgs_sample.json
shared/: route-catalogue.json  route-drive-lines.json  route-journeys.json  route-polylines.json  weather-regime-cases.json
warehouse/: README.md  dbt_project.yml  profiles.yml
warehouse/ci/: fixtures.sql
warehouse/models/: sources.yml
warehouse/models/marts/: mart_active_alerts.sql  mart_crash_conditions.sql  mart_crash_patterns.sql  mart_hotspots.sql  mart_incident_conditions.sql  mart_pattern_causes.sql  mart_route_crashes.sql  schema.yml
warehouse/models/staging/: schema.yml  stg_alerts.sql  stg_crashes.sql  stg_incidents.sql  stg_road_events.sql
warehouse/seeds/: route_lengths.csv  segments.csv
warehouse/tests/: assert_crash_patterns_unique_grain.sql  assert_hotspots_unique_grain.sql  assert_incident_conditions_unique_grain.sql  assert_pattern_causes_unique_grain.sql
