# Python side of the monorepo: the ingestion pipeline (pipeline/).
# The warehouse (dbt) and backend (FastAPI, backend/pyproject.toml) have their own setups.
#
#   python -m venv .venv && .venv/Scripts/activate   (Windows)
#   pip install -e ".[dev]"
#   pytest

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sierra-pass-watch-pipeline"
version = "0.1.0"
description = "Sierra Pass Watch ingestion: poll public sources, write straight to Postgres, plus backfill"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "responses>=0.25",
    "testcontainers[postgres]>=4.8",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools.package-data]
pipeline = ["data/*.json", "db/*.sql"]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
# Contract tests hit real external APIs — excluded by default so the normal run
# stays offline and deterministic. Opt in with:  pytest -m network
addopts = "-m 'not network'"
markers = [
    "integration: exercises real infrastructure (Docker via Testcontainers); skipped when unavailable",
    "network: hits a real upstream API to catch shape drift; opt-in, slow/flaky, run with -m network",
]

[tool.coverage.run]
source = ["pipeline"]
omit = ["pipeline/tests/*"]
