# Sierra Safe API - FastAPI service. Package config and dependencies.
#   cd backend
#   pip install -e ".[dev]"
#   uvicorn api.main:app --port 5080 --no-server-header

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sierra-safe-api"
version = "0.1.0"
description = "HTTP API for the Sierra Safe frontend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Typed settings from the environment (config.py).
    "pydantic-settings>=2.5",
    # Async Postgres access + a connection pool (db.py, segments.py).
    "psycopg[binary,pool]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    # TestClient drives the app in-process over httpx - no socket, no server.
    "httpx>=0.28",
    # anyio backend for the async repository test.
    "pytest-asyncio>=0.24",
    # A real Postgres for the repository integration test.
    "testcontainers[postgres]>=4.8",
]

[tool.setuptools.packages.find]
include = ["api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Async repository tests await directly; auto mode runs them without a marker.
asyncio_mode = "auto"
# The Testcontainers Postgres test is opt-in so the default run stays offline
# and fast. CI runs it as a separate step. Enable with:  pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: exercises a real Postgres (Docker via Testcontainers); skipped when unavailable",
]

[tool.coverage.run]
source = ["api"]
