# Sierra Safe API - FastAPI service. Package config and dependencies.
#
# The API depends on sierra-corridor-pipeline, which is monorepo-local (NOT on
# PyPI) - install the repo root first, or pip will try to resolve that name
# against the public index and fail:
#   pip install -e .          # from the repo root: the pipeline package
#   cd backend
#   pip install -e ".[dev]"
#   python -m api              # serves :5080 (see README)

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sierra-safe-api"
version = "0.1.0"
description = "HTTP API for the Sierra Safe frontend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Typed settings from the environment (config.py).
    "pydantic-settings>=2.5",
    # Outbound HTTP to Open-Meteo (weather.py) and, via TestClient, the test
    # transport.
    "httpx>=0.28",
    # The regime classifier lives in the pipeline package, so ONE
    # implementation labels forecasts, live readings and crash history.
    # Monorepo-local: install the repo root first (`pip install -e ..`).
    "sierra-corridor-pipeline",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[tool.setuptools.packages.find]
include = ["api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["api"]
